plugins {
    id 'java'
    id 'maven'
    id 'application'
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url "https://jitpack.io" }
}

dependencies {
    implementation(group:'com.github.dialogos-project', name:'dialogos', version:'2.1.3') {
        exclude module: 'DialogOS_SphinxPlugin'
        exclude module: 'DialogOS_MaryTTSPlugin'
    }
    implementation 'io.github.lambdaprime:jros2client:1.0'
    implementation 'com.google.guava:guava:30.1-jre'
    implementation 'org.slf4j:slf4j-api:1.7.24'
}

mainClassName = 'com.clt.dialogos.DialogOS'

sourceCompatibility = '17'
targetCompatibility = '17'
def version = 1.0

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

tasks.distTar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.distZip {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

run {
    standardInput = System.in
    jvmArgs = ['--add-opens=java.base/java.nio.charset=ALL-UNNAMED']
}